--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-hook-geolocation":"1.0.8",
     "sweetalert2": "^11.1.5",
     "sweetalert2-react-content": "^4.1.1",
     "web-vitals": "^1.0.1"
